--- a/src/ChatApp.Auth/appsettings.json
+++ b/src/ChatApp.Auth/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Secret": "verysecretsecretoopsnotsecretanymore",
+    "Issuer": "ChatApp",
+    "Audience": "ChatAppUsers",
+    "ExpirationInMinutes": 30
+  }
 }
