jwt and refresh tokens

--- a/src/ChatApp.Auth/appsettings.json
+++ b/src/ChatApp.Auth/appsettings.json
@@ -10,6 +10,7 @@
     "Secret": "verysecretsecretoopsnotsecretanymore",
     "Issuer": "ChatApp",
     "Audience": "ChatAppUsers",
-    "ExpirationInMinutes": 30
+    "ExpirationInMinutes": 30,
+    "RefreshTokenExpirationInDays": 30
   }
 }
