--- a/src/ChatApp.Auth/ChatApp.Auth.csproj
+++ b/src/ChatApp.Auth/ChatApp.Auth.csproj
@@ -16,7 +16,10 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Rebus" Version="8.9.0" />
+    <PackageReference Include="Rebus.RabbitMq" Version="10.1.0" />
+    <PackageReference Include="Rebus.ServiceProvider" Version="10.6.0" />
   </ItemGroup>
 
 </Project>
