--- a/src/ChatApp.Auth/appsettings.Development.json
+++ b/src/ChatApp.Auth/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Auth;Username=postgres;Password=pass;"
+  },
+  "RabbitMQ": {
+    "ConnectionString": "amqp://admin:admin123@localhost:5672",
+    "InputQueueName": "auth-service",
+    "Routing": "user-service"
   }
 }
