--- a/src/ChatApp.Auth/appsettings.Docker.json
+++ b/src/ChatApp.Auth/appsettings.Docker.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDB": "connstring"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=Auth;Username=postgres;Password=pass;"
+  },
+  "RabbitMQ": {
+    "ConnectionString": "amqp://admin:admin123@rabbitmq:5672",
+    "InputQueueName": "auth-service",
+    "Routing": "user-service"
   }
 }
 
