--- a/src/ChatApp.Auth/appsettings.json
+++ b/src/ChatApp.Auth/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "JWT": {
+  "JwtOptions": {
     "Secret": "verysecretsecretoopsnotsecretanymore",
     "Issuer": "ChatApp",
     "Audience": "ChatAppUsers",
