--- a/src/ChatApp.User/Properties/launchSettings.json
+++ b/src/ChatApp.User/Properties/launchSettings.json
@@ -18,6 +18,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "5002",
+        "ASPNETCORE_HTTP_PORTS": "5003"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
