microservice communication adjustments

--- a/src/ChatApp.User/appsettings.Development.json
+++ b/src/ChatApp.User/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=User;Username=postgres;Password=pass;"
+  },
+  "RabbitMQ": {
+    "ConnectionString": "amqp://admin:admin123@localhost:5672",
+    "InputQueueName": "user-service",
+    "Routing": ""
   }
 }
