--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
             dockerfile: src/ChatApp.Auth/Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Docker
+            - ASPNETCORE_URLS=http://+:5000 #;https://+:5001 for future https
         depends_on:
             postgres:
                 condition: service_healthy
@@ -63,6 +64,7 @@ services:
             dockerfile: src/ChatApp.User/Dockerfile
         environment:
             - ASPNETCORE_ENVIRONMENT=Docker
+            - ASPNETCORE_URLS=http://+:5002 #;https://+:5003 for future https
         depends_on:
             postgres:
                 condition: service_healthy
