--- a/src/ChatApp.Chat/appsettings.Development.json
+++ b/src/ChatApp.Chat/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Chat;Username=postgres;Password=pass;"
   }
 }
