--- a/src/ChatApp.Chat/appsettings.json
+++ b/src/ChatApp.Chat/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Secret": "verysecretsecretoopsnotsecretanymore",
+    "Issuer": "ChatApp",
+    "Audience": "ChatAppUsers",
+    "ExpirationInMinutes": 30,
+    "RefreshTokenExpirationInDays": 15
+  }
 }
