--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,20 @@ services:
             RABBITMQ_DEFAULT_USER: admin
             RABBITMQ_DEFAULT_PASS: admin123
         healthcheck:
-            test: ["CMD", "rabbitmq-diagnostics", "status"]
+            test: ["CMD-SHELL", "rabbitmq-diagnostics status"]
+            interval: 10s
+            timeout: 10s
+            retries: 3
+        networks:
+            - chatapp-network
+
+    redis:
+        image: redis
+        restart: always
+        ports:
+            - "6379:6379"
+        healthcheck:
+            test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
             interval: 10s
             timeout: 10s
             retries: 3
@@ -46,10 +59,8 @@ services:
         depends_on:
             postgres:
                 condition: service_healthy
-                restart: true
             rabbitmq:
                 condition: service_healthy
-                restart: true
         networks:
             - chatapp-network
     
@@ -68,10 +79,8 @@ services:
         depends_on:
             postgres:
                 condition: service_healthy
-                restart: true
             rabbitmq:
                 condition: service_healthy
-                restart: true
         networks:
             - chatapp-network
 
@@ -90,10 +99,10 @@ services:
         depends_on:
             postgres:
                 condition: service_healthy
-                restart: true
             rabbitmq:
                 condition: service_healthy
-                restart: true
+            redis:
+                condition: service_healthy
         networks:
             - chatapp-network
             
