--- a/src/ChatApp.Chat/appsettings.Docker.json
+++ b/src/ChatApp.Chat/appsettings.Docker.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=Chat;Username=postgres;Password=pass;"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=Chat;Username=postgres;Password=pass;",
+    "Redis": "redis:6379"
   }
 }
