--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,8 @@ http {
 
         # Auth Service
         location /api/auth/ {
-            proxy_pass http://auth-service/;
+            include cors.conf;
+            proxy_pass http://auth-service/auth/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +40,8 @@ http {
 
         # User Service
         location /api/user/ {
-            proxy_pass http://user-service/;
+            include cors.conf;
+            proxy_pass http://user-service/user/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
