--- a/src/ChatApp.Chat/appsettings.Development.json
+++ b/src/ChatApp.Chat/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Chat;Username=postgres;Password=pass;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Chat;Username=postgres;Password=pass;",
+    "Redis": "localhost:6379"
   }
 }
